# MedGemma

./: .gitignore  CLAUDE.md  Makefile  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml  test_parsing.py
MedGemma/: MedGemma.entitlements  MedGemmaApp.swift
MedGemma.xcodeproj/: project.pbxproj
MedGemma/Models/: Conversation.swift  Message.swift
MedGemma/Services/: ModelManager.swift
MedGemma/Tests/: ModelManagerTests.swift  TestRunner.swift
MedGemma/Utils/: UIImage+CoreML.swift
MedGemma/ViewModels/: ChatViewModel.swift  SkinAnalysisViewModel.swift
MedGemma/Views/: AnalysisLoadingView.swift  ChatView.swift  ContentView.swift  HistoryView.swift  LoadingView.swift  MainAppView.swift  MedicalReferenceView.swift  SettingsView.swift  SkinAnalysisView.swift  SymptomCheckerView.swift
MedGemmaTests/: MedGemmaTests.swift  ModelManagerTests.swift  TestImageGenerator.swift
MedGemmaUITests/: MedGemmaUITests.swift  MedGemmaUITestsLaunchTests.swift
tools/model-conversion/: README.md  convert_model.py  pyproject.toml  test_real_image.py
